--- a/admin-dashboard-aazalea-rivera-bsit3b/package.json
+++ b/admin-dashboard-aazalea-rivera-bsit3b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin-dashboard-lemuel-francisco-bsit",
+  "name": "admin-dashboard-aazalea-rivera-bsit3b",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
-    "http-proxy-middleware": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
@@ -15,12 +14,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start --ignore client",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://192.168.25.60/movieproject-api",
+  "proxy": "http://localhost/movieproject-api",
   "eslintConfig": {
     "extends": [
       "react-app",
